--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,13 @@ input[type=checkbox]:checked + label:before {
   }
 }
 @media screen and (max-width: 768px){
+  header{
+    background-color: #141429;
+  }
+  header img {
+    width: 155px;
+    height: 50px;
+  }
   .open{
     width: 1320px;
     height: 1320px;
@@ -607,7 +614,7 @@ input[type=checkbox]:checked + label:before {
   }
   .form_block{
     margin: auto;
-    padding: 123px 30px 25px 30px;
+    padding: 123px 30px 0 30px;
   }
   .form_block h2{
     font-size: 52px;
@@ -632,13 +639,25 @@ input[type=checkbox]:checked + label:before {
     font-size: 28px;
   }
   .new-select__list{
-    width: 463px;
+    width: 99%;
   }
   .select{
     max-width: 102%;
   }
 }
 @media screen and (max-width: 570px){
+  header{
+    padding: 25px 25px 5px 25px;
+  }
+  .present a img {
+    height: 70px;
+    width: 60px;
+}
+  .all_bar {
+    position: fixed;
+    top: 47px;
+    right: 61px;
+}
   .look_present{
     width: auto;
   }
